# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Use the system install of Xcode for tools like ibtool, libtool, etc.
  # This does not affect the compiler. When this variable is false, targets will
  # instead use a hermetic install of Xcode.
  use_system_xcode = true

  # The path to the hermetic install of Xcode. Only relevant when
  # use_system_xcode = false.
  hermetic_xcode_path = ""

  # Compile with Xcode version of clang instead of hermetic version shipped
  # with the build. Used on iOS to ship official builds (as they are built
  # with the version of clang shipped with Xcode).
  use_xcode_clang = true

  # Produce dSYM files for targets that are configured to do so. dSYM
  # generation is controlled globally as it is a linker output (produced via
  # the //build/toolchain/mac/linker_driver.py. Enabling this will result in
  # all shared library, loadable module, and executable targets having a dSYM
  # generated.
  enable_dsyms = true

  # Strip symbols from linked targets by default. If this is enabled, the
  # //build/config/mac:strip_all config will be applied to all linked targets.
  # If custom stripping parameters are required, remove that config from a
  # linked target and apply custom -Wcrl,strip flags. See
  # //build/toolchain/mac/linker_driver.py for more information.
  enable_stripping = is_official_build
}

# Save unstripped copies of targets with a ".unstripped" suffix. This is
# useful to preserve the original output when enable_stripping=true but
# we're not actually generating real dSYMs.
save_unstripped_output = enable_stripping && !enable_dsyms
