# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# These variables used to live here
import("//build/toolchain/apple/symbols.gni")

declare_args() {
  # Use the system install of Xcode for tools like ibtool, libtool, etc.
  # This does not affect the compiler. When this variable is false, targets will
  # instead use a hermetic install of Xcode.
  use_system_xcode = true

  # The path to the hermetic install of Xcode. Only relevant when
  # use_system_xcode = false.
  hermetic_xcode_path = ""

  # Compile with Xcode version of clang instead of hermetic version shipped
  # with the build.
  use_xcode_clang = true
}
