import("//build/toolchain/gcc_toolchain.gni")
import("//build/toolchain/posix/settings.gni")

gcc_toolchain("clang_x86") {
  cc = clang_cc
  cxx = clang_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "x86"
    current_os = target_os
    is_clang = true
  }
}

gcc_toolchain("x86") {
  cc = gcc_cc
  cxx = gcc_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "x86"
    current_os = target_os
    is_clang = false
  }
}

gcc_toolchain("clang_x64") {
  cc = clang_cc
  cxx = clang_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "x64"
    current_os = target_os
    is_clang = true
  }
}

gcc_toolchain("x64") {
  cc = gcc_cc
  cxx = gcc_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "x64"
    current_os = target_os
    is_clang = false
  }
}

gcc_toolchain("arm") {
  cc = gcc_cc
  cxx = gcc_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "arm"
    current_os = target_os
    is_clang = false
  }
}

gcc_toolchain("arm64") {
  cc = gcc_cc
  cxx = gcc_cxx
  ld = cxx

  readelf = readelf
  ar = ar
  nm = nm

  toolchain_args = {
    current_cpu = "arm64"
    current_os = target_os
    is_clang = false
  }
}
